--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.fa filter=lfs diff=lfs merge=lfs -text
 *.bam filter=lfs diff=lfs merge=lfs -text
 *.fna.gz filter=lfs diff=lfs merge=lfs -text
+all_codon_counts.csv filter=lfs diff=lfs merge=lfs -text
+all_codon_counts_total.csv filter=lfs diff=lfs merge=lfs -text
