--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.fna.gz filter=lfs diff=lfs merge=lfs -text
 all_codon_counts.csv filter=lfs diff=lfs merge=lfs -text
 all_codon_counts_total.csv filter=lfs diff=lfs merge=lfs -text
+all_rscu.csv filter=lfs diff=lfs merge=lfs -text
+all_rscu_total.csv filter=lfs diff=lfs merge=lfs -text
