--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,7 @@ all_codon_counts.csv filter=lfs diff=lfs merge=lfs -text
 all_codon_counts_total.csv filter=lfs diff=lfs merge=lfs -text
 all_rscu.csv filter=lfs diff=lfs merge=lfs -text
 all_rscu_total.csv filter=lfs diff=lfs merge=lfs -text
+all_rscu_ratio_human.csv filter=lfs diff=lfs merge=lfs -text
+all_rscu_ratio_mosquito.csv filter=lfs diff=lfs merge=lfs -text
+all_rscu_ratio_total_human.csv filter=lfs diff=lfs merge=lfs -text
+all_rscu_ratio_total_mosquito.csv filter=lfs diff=lfs merge=lfs -text
