--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,4 @@ counts_zika.tsv filter=lfs diff=lfs merge=lfs -text
 cpm_dengue.csv filter=lfs diff=lfs merge=lfs -text
 cpm_zika.csv filter=lfs diff=lfs merge=lfs -text
 hg38.Ens_102.gtf filter=lfs diff=lfs merge=lfs -text
+point_mutations.csv filter=lfs diff=lfs merge=lfs -text
