--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,4 @@ cpm_dengue.csv filter=lfs diff=lfs merge=lfs -text
 cpm_zika.csv filter=lfs diff=lfs merge=lfs -text
 hg38.Ens_102.gtf filter=lfs diff=lfs merge=lfs -text
 point_mutations.csv filter=lfs diff=lfs merge=lfs -text
+viruses.gbff.gz filter=lfs diff=lfs merge=lfs -text
