--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,4 @@ cpm_zika.csv filter=lfs diff=lfs merge=lfs -text
 hg38.Ens_102.gtf filter=lfs diff=lfs merge=lfs -text
 point_mutations.csv filter=lfs diff=lfs merge=lfs -text
 viruses.gbff.gz filter=lfs diff=lfs merge=lfs -text
+supplemental_table_5.csv filter=lfs diff=lfs merge=lfs -text
